Fix right alignment for icons

--- a/resources/assets/sass/_8bvmain.scss
+++ b/resources/assets/sass/_8bvmain.scss
@@ -67,7 +67,7 @@ a {
 .mixes-container .mix-icons {
     width: 50%;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     flex-wrap: wrap;
     margin-left: 10px;
 }
